[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/kunai.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/hitbox .tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Imports/kunai.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.81596

[node name="kunai" groups=[
"projectile",
] instance=ExtResource( 2 )]
collision_layer = 129
collision_mask = 2147483716
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]
position = Vector2( 2.38419e-07, 0 )
rotation = 0.684169
scale = Vector2( 1.31938, 1.14728 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 1.99234, -0.836412 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( 1.95619, -0.824909 )
scale = Vector2( 1.35594, 0.381357 )
[connection signal="area_entered" from="." to="." method="_on_kunai_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_kunai_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
